--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require": {
-        "php": "^7.2",
+        "php": ">=5.7",
         "ext-xml": "*",
         "ext-curl": "*"
     },
